Add thread messages to thread exporter